--- a/style.css
+++ b/style.css
@@ -3,62 +3,151 @@
     padding: 0;
     text-align: center;
 }
-h1{
+
+h1 {
     background-color: black;
     color: white;
     height: 5rem;
     line-height: 5rem;
 }
+
 .choice {
     height: 165px;
-    width: 165x;
+    width: 165px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.choice:hover{
+
+.choice:hover {
     cursor: pointer;
     background-color: black;
 }
 
-img{
+img {
     height: 150px;
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
 }
-.choices{
-    display: flex ;
+
+.choices {
+    display: flex;
     justify-content: center;
-    align-items: center ;
+    align-items: center;
     gap: 3rem;
     margin-top: 5rem;
 }
 
-.score-board{
+.score-board {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
     margin-top: 3rem;
     gap: 5rem;
-
 }
 
-#user-score,#comp-score{
+#user-score,
+#comp-score {
     font-size: 4rem;
 }
-.msg-container{
-     margin-top: 5rem;
+
+.msg-container {
+    margin-top: 5rem;
 }
 
-#msg{
-   
+#msg {
     background-color: black;
     color: white;
     font-size: 2rem;
     display: inline;
     padding: 1rem;
     border-radius: 1rem;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 1.8rem;
+        height: 4rem;
+        line-height: 4rem;
+    }
+
+    .choices {
+        flex-wrap: wrap;
+        gap: 2rem;
+        margin-top: 3rem;
+    }
+
+    .choice {
+        height: 130px;
+        width: 130px;
+    }
+
+    img {
+        height: 120px;
+        width: 120px;
+    }
+
+    .score-board {
+        flex-direction: column;
+        gap: 2rem;
+        font-size: 1.5rem;
+        margin-top: 2rem;
+    }
+
+    #user-score,
+    #comp-score {
+        font-size: 3rem;
+    }
+
+    #msg {
+        font-size: 1.4rem;
+        padding: 0.8rem;
+    }
+}
+
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 1.5rem;
+        height: 3.5rem;
+        line-height: 3.5rem;
+    }
+
+    .choices {
+        flex-direction: column;
+        gap: 1.5rem;
+        margin-top: 2.5rem;
+    }
+
+    .choice {
+        height: 110px;
+        width: 110px;
+    }
+
+    img {
+        height: 100px;
+        width: 100px;
+    }
+
+    .score-board {
+        font-size: 1.3rem;
+        gap: 1.5rem;
+    }
+
+    #user-score,
+    #comp-score {
+        font-size: 2.5rem;
+    }
+
+    #msg {
+        font-size: 1.2rem;
+        padding: 0.6rem;
+    }
+
+    .msg-container {
+        margin-top: 3rem;
+    }
 }
